--- a/classroom/src/assets/settings.json
+++ b/classroom/src/assets/settings.json
@@ -6,5 +6,5 @@
   "scatter": {"width": 400, "height": 400},
   "boxplot": {"cloud": true},
   "stv": {"max_clusters": 4},
-  "mtv": {"horizontal": true}
+  "mtv": {"horizontal": false}
 }
