--- a/classroom/angular.json
+++ b/classroom/angular.json
@@ -13,6 +13,9 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "allowedCommonJsDependencies": [
+              "jquery"
+            ],
             "aot": true,
             "outputPath": "dist/classroom",
             "index": "src/index.html",
