--- a/classroom/package.json
+++ b/classroom/package.json
@@ -27,60 +27,60 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^10.0.5",
-    "@angular/cdk": "~10.1.0",
-    "@angular/common": "^10.0.5",
-    "@angular/compiler": "^10.0.5",
-    "@angular/core": "^10.0.5",
-    "@angular/forms": "^10.0.5",
-    "@angular/material": "^10.1.0",
-    "@angular/platform-browser": "^10.0.5",
-    "@angular/platform-browser-dynamic": "^10.0.5",
-    "@angular/router": "^10.0.5",
+    "@angular/animations": "^10.0.8",
+    "@angular/cdk": "~10.1.3",
+    "@angular/common": "^10.0.8",
+    "@angular/compiler": "^10.0.8",
+    "@angular/core": "^10.0.8",
+    "@angular/forms": "^10.0.8",
+    "@angular/material": "^10.1.3",
+    "@angular/platform-browser": "^10.0.8",
+    "@angular/platform-browser-dynamic": "^10.0.8",
+    "@angular/router": "^10.0.8",
     "angular-google-charts": "^1.1.4",
-    "angular-split": "^3.0.3",
+    "angular-split": "^4.0.0",
     "angular-tag-cloud-module": "^5.0.0",
     "core-js": "^3.6.5",
     "d3": "^5.16.0",
     "jquery": "^3.5.1",
     "ngx-ui-loader": "^9.1.1",
-    "rxjs": "^6.6.0",
-    "rxjs-compat": "^6.6.0",
+    "rxjs": "^6.6.2",
+    "rxjs-compat": "^6.6.2",
     "rxjs-tslint": "^0.1.8",
     "service": "^0.1.4",
-    "tslib": "^2.0.0",
+    "tslib": "^2.0.1",
     "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1000.4",
-    "@angular/cli": "^10.0.4",
-    "@angular/compiler-cli": "^10.0.5",
-    "@angular/language-service": "^10.0.5",
+    "@angular-devkit/build-angular": "~0.1000.5",
+    "@angular/cli": "^10.0.5",
+    "@angular/compiler-cli": "^10.0.8",
+    "@angular/language-service": "^10.0.8",
     "@types/d3": "^5.7.2",
-    "@types/jasmine": "^3.5.11",
+    "@types/jasmine": "^3.5.12",
     "@types/jasminewd2": "^2.0.8",
-    "@types/node": "^14.0.24",
-    "@typescript-eslint/eslint-plugin": "^3.7.0",
-    "@typescript-eslint/eslint-plugin-tslint": "^3.7.0",
-    "@typescript-eslint/parser": "^3.7.0",
+    "@types/node": "^14.0.27",
+    "@typescript-eslint/eslint-plugin": "^3.9.0",
+    "@typescript-eslint/eslint-plugin-tslint": "^3.9.0",
+    "@typescript-eslint/parser": "^3.9.0",
     "ajv": "^6.12.3",
-    "ajv-keywords": "^3.5.1",
+    "ajv-keywords": "^3.5.2",
     "codelyzer": "^6.0.0",
-    "eslint": "^7.5.0",
+    "eslint": "^7.6.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-jsdoc": "^30.0.3",
-    "jasmine-core": "~3.5.0",
+    "eslint-plugin-jsdoc": "^30.2.1",
+    "jasmine-core": "^3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "^5.1.0",
+    "karma": "^5.1.1",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~3.3.0",
+    "karma-jasmine": "^4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "memoizee": "^0.4.14",
     "protractor": "~7.0.0",
     "ts-node": "^8.10.2",
-    "tslint": "~6.1.0",
+    "tslint": "^6.1.3",
     "typescript": "^3.9.7"
   }
 }
