--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,10 +18,9 @@ variables:
   DOCKER_TLS_CERTDIR: "/certs"
   REF_CONTAINER: ${CI_REGISTRY_IMAGE}:${CI_COMMIT_REF_SLUG}
   RELEASE_CONTAINER:  ${CI_REGISTRY_IMAGE}:latest
-  SAST_DISABLE_DIND: "false"
 
 before_script:
-  - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
+  
 
 pylint:
   stage: test
@@ -70,12 +69,16 @@ classroom_test:
 
 build:
   stage: build
+  before_script:
+    - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
   script:
     - docker build -t "${REF_CONTAINER}" .
     - docker push "${REF_CONTAINER}"
 
 release:
   stage: release
+  before_script:
+    - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
   script:
     - docker pull "${REF_CONTAINER}"
     - docker tag "${REF_CONTAINER}" "${RELEASE_CONTAINER}"
