--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -72,7 +72,7 @@ build:
   before_script:
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
   script:
-    - docker build -t "${REF_CONTAINER}" .
+    - docker build --build-arg=BRANCH="${CI_COMMIT_BRANCH}" --build-arg=COMMIT="${CI_COMMIT_SHA}" --build-arg=TAG="${CI_COMMIT_TAG}" --build-arg=USER="${GITLAB_USER_NAME}" --build-arg=URL="${CI_REPOSITORY_URL}" -t "${REF_CONTAINER}" .
     - docker push "${REF_CONTAINER}"
 
 release:
