--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,21 @@
 -i https://pypi.org/simple
 aiofiles==0.5.0
 beautifulsoup4==4.9.1
-dnspython==2.0.0
+dnspython==2.0.0; python_version >= '3.6'
 email-validator==1.1.1
-fastapi==0.61.0
-idna==2.10
+fastapi==0.61.1
+idna==2.10; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 itsdangerous==1.1.0
 mysqlclient==2.0.1
-numpy==1.19.1
-pandas==1.1.1
-pillow==7.2.0
-pydantic==1.6.1
-python-dateutil==2.8.1
+numpy==1.19.2; python_version >= '3.6'
+pandas==1.1.2
+pillow==7.2.0; python_version >= '3.5'
+pydantic==1.6.1; python_version >= '3.6'
+python-dateutil==2.8.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 pytz==2020.1
-reportlab==3.5.48
-six==1.15.0
-soupsieve==2.0.1
+reportlab==3.5.49
+six==1.15.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+soupsieve==2.0.1; python_version >= '3.5'
 sqlalchemy==1.3.19
-starlette==0.13.6
-ujson==3.1.0
+starlette==0.13.6; python_version >= '3.6'
+ujson==3.2.0
