--- a/classroom/package.json
+++ b/classroom/package.json
@@ -27,21 +27,21 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^10.1.1",
-    "@angular/cdk": "~10.2.0",
-    "@angular/common": "^10.1.1",
-    "@angular/compiler": "^10.1.1",
-    "@angular/core": "^10.1.1",
-    "@angular/forms": "^10.1.1",
-    "@angular/material": "^10.2.0",
-    "@angular/platform-browser": "^10.1.1",
-    "@angular/platform-browser-dynamic": "^10.1.1",
-    "@angular/router": "^10.1.1",
-    "angular-google-charts": "^1.1.4",
+    "@angular/animations": "^10.1.3",
+    "@angular/cdk": "~10.2.2",
+    "@angular/common": "^10.1.3",
+    "@angular/compiler": "^10.1.3",
+    "@angular/core": "^10.1.3",
+    "@angular/forms": "^10.1.3",
+    "@angular/material": "^10.2.2",
+    "@angular/platform-browser": "^10.1.3",
+    "@angular/platform-browser-dynamic": "^10.1.3",
+    "@angular/router": "^10.1.3",
+    "angular-google-charts": "^1.1.6",
     "angular-split": "^4.0.0",
     "angular-tag-cloud-module": "^5.1.0",
     "core-js": "^3.6.5",
-    "d3": "^6.1.1",
+    "d3": "^6.2.0",
     "jquery": "^3.5.1",
     "ngx-ui-loader": "^9.1.1",
     "rxjs": "^6.6.3",
@@ -52,26 +52,26 @@
     "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1001.1",
-    "@angular/cli": "^10.1.1",
-    "@angular/compiler-cli": "^10.1.1",
-    "@angular/language-service": "^10.1.1",
+    "@angular-devkit/build-angular": "~0.1001.3",
+    "@angular/cli": "^10.1.3",
+    "@angular/compiler-cli": "^10.1.3",
+    "@angular/language-service": "^10.1.3",
     "@types/d3": "^5.7.2",
     "@types/jasmine": "^3.5.14",
     "@types/jasminewd2": "^2.0.8",
-    "@types/node": "^14.10.0",
-    "@typescript-eslint/eslint-plugin": "^4.1.0",
-    "@typescript-eslint/eslint-plugin-tslint": "^4.1.0",
-    "@typescript-eslint/parser": "^4.1.0",
-    "ajv": "^6.12.4",
+    "@types/node": "^14.11.2",
+    "@typescript-eslint/eslint-plugin": "^4.2.0",
+    "@typescript-eslint/eslint-plugin-tslint": "^4.2.0",
+    "@typescript-eslint/parser": "^4.2.0",
+    "ajv": "^6.12.5",
     "ajv-keywords": "^3.5.2",
     "codelyzer": "^6.0.0",
-    "eslint": "^7.8.1",
+    "eslint": "^7.9.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-jsdoc": "^30.4.0",
+    "eslint-plugin-jsdoc": "^30.5.2",
     "jasmine-core": "^3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
+    "jasmine-spec-reporter": "^6.0.0",
     "karma": "^5.2.2",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
