--- a/classroom/package.json
+++ b/classroom/package.json
@@ -27,23 +27,23 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^10.2.0",
-    "@angular/cdk": "~10.2.5",
-    "@angular/common": "^10.2.0",
-    "@angular/compiler": "^10.2.0",
-    "@angular/core": "^10.2.0",
-    "@angular/forms": "^10.2.0",
-    "@angular/material": "^10.2.5",
-    "@angular/platform-browser": "^10.2.0",
-    "@angular/platform-browser-dynamic": "^10.2.0",
-    "@angular/router": "^10.2.0",
+    "@angular/animations": "^11.0.0",
+    "@angular/cdk": "~11.0.0",
+    "@angular/common": "^11.0.0",
+    "@angular/compiler": "^11.0.0",
+    "@angular/core": "^11.0.0",
+    "@angular/forms": "^11.0.0",
+    "@angular/material": "^11.0.0",
+    "@angular/platform-browser": "^11.0.0",
+    "@angular/platform-browser-dynamic": "^11.0.0",
+    "@angular/router": "^11.0.0",
     "angular-google-charts": "^1.1.6",
     "angular-split": "^4.0.0",
-    "angular-tag-cloud-module": "^5.1.0",
-    "core-js": "^3.6.5",
+    "angular-tag-cloud-module": "^5.2.0",
+    "core-js": "^3.7.0",
     "d3": "^6.2.0",
     "jquery": "^3.5.1",
-    "ngx-ui-loader": "^9.1.1",
+    "ngx-ui-loader": "^10.0.0",
     "rxjs": "^6.6.3",
     "rxjs-compat": "^6.6.3",
     "rxjs-tslint": "^0.1.8",
@@ -52,27 +52,27 @@
     "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1002.0",
-    "@angular/cli": "^10.2.0",
-    "@angular/compiler-cli": "^10.2.0",
-    "@angular/language-service": "^10.2.0",
-    "@types/d3": "^5.16.3",
-    "@types/jasmine": "^3.5.14",
+    "@angular-devkit/build-angular": "~0.1100.0",
+    "@angular/cli": "^11.0.0",
+    "@angular/compiler-cli": "^11.0.0",
+    "@angular/language-service": "^11.0.0",
+    "@types/d3": "^6.1.0",
+    "@types/jasmine": "^3.6.1",
     "@types/jasminewd2": "^2.0.8",
-    "@types/node": "^14.11.5",
-    "@typescript-eslint/eslint-plugin": "^4.4.0",
-    "@typescript-eslint/eslint-plugin-tslint": "^4.4.0",
-    "@typescript-eslint/parser": "^4.4.0",
+    "@types/node": "^14.14.7",
+    "@typescript-eslint/eslint-plugin": "^4.7.0",
+    "@typescript-eslint/eslint-plugin-tslint": "^4.7.0",
+    "@typescript-eslint/parser": "^4.7.0",
     "ajv": "^6.12.5",
     "ajv-keywords": "^3.5.2",
     "codelyzer": "^6.0.1",
-    "eslint": "^7.10.0",
-    "eslint-config-prettier": "^6.12.0",
+    "eslint": "^7.13.0",
+    "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsdoc": "^30.6.3",
+    "eslint-plugin-jsdoc": "^30.7.7",
     "jasmine-core": "^3.6.0",
     "jasmine-spec-reporter": "^6.0.0",
-    "karma": "^5.2.3",
+    "karma": "~5.1.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "^4.0.1",
@@ -81,6 +81,6 @@
     "protractor": "~7.0.0",
     "ts-node": "^9.0.0",
     "tslint": "^6.1.3",
-    "typescript": "^4.0.3"
+    "typescript": "^4.0.5"
   }
 }
