--- a/classroom/package.json
+++ b/classroom/package.json
@@ -27,49 +27,50 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^11.0.0",
-    "@angular/cdk": "~11.0.0",
-    "@angular/common": "^11.0.0",
-    "@angular/compiler": "^11.0.0",
-    "@angular/core": "^11.0.0",
-    "@angular/forms": "^11.0.0",
-    "@angular/material": "^11.0.0",
-    "@angular/platform-browser": "^11.0.0",
-    "@angular/platform-browser-dynamic": "^11.0.0",
-    "@angular/router": "^11.0.0",
+    "@angular/animations": "^11.0.9",
+    "@angular/cdk": "~11.0.4",
+    "@angular/common": "^11.0.9",
+    "@angular/compiler": "^11.0.9",
+    "@angular/core": "^11.0.9",
+    "@angular/forms": "^11.0.9",
+    "@angular/material": "^11.0.4",
+    "@angular/platform-browser": "^11.0.9",
+    "@angular/platform-browser-dynamic": "^11.0.9",
+    "@angular/router": "^11.0.9",
+    "@circlon/angular-tree-component": "^10.0.2",
     "angular-google-charts": "^1.1.6",
-    "angular-split": "^4.0.0",
+    "angular-split": "^5.0.0",
     "angular-tag-cloud-module": "^5.2.0",
-    "core-js": "^3.7.0",
-    "d3": "^6.2.0",
+    "core-js": "^3.8.2",
+    "d3": "^6.3.1",
     "jquery": "^3.5.1",
     "ngx-ui-loader": "^10.0.0",
     "rxjs": "^6.6.3",
     "rxjs-compat": "^6.6.3",
     "rxjs-tslint": "^0.1.8",
     "service": "^0.1.4",
-    "tslib": "^2.0.3",
+    "tslib": "^2.1.0",
     "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1100.1",
-    "@angular/cli": "^11.0.1",
-    "@angular/compiler-cli": "^11.0.0",
-    "@angular/language-service": "^11.0.0",
+    "@angular-devkit/build-angular": "~0.1100.7",
+    "@angular/cli": "^11.0.7",
+    "@angular/compiler-cli": "^11.0.9",
+    "@angular/language-service": "^11.0.9",
     "@types/d3": "^6.2.0",
-    "@types/jasmine": "^3.6.1",
+    "@types/jasmine": "^3.6.2",
     "@types/jasminewd2": "^2.0.8",
-    "@types/node": "^14.14.8",
-    "@typescript-eslint/eslint-plugin": "^4.8.1",
-    "@typescript-eslint/eslint-plugin-tslint": "^4.8.1",
-    "@typescript-eslint/parser": "^4.8.1",
-    "ajv": "^6.12.6",
-    "ajv-keywords": "^3.5.2",
+    "@types/node": "^14.14.20",
+    "@typescript-eslint/eslint-plugin": "^4.12.0",
+    "@typescript-eslint/eslint-plugin-tslint": "^4.12.0",
+    "@typescript-eslint/parser": "^4.12.0",
+    "ajv": "^7.0.3",
+    "ajv-keywords": "^4.0.0",
     "codelyzer": "^6.0.1",
-    "eslint": "^7.13.0",
-    "eslint-config-prettier": "^6.15.0",
+    "eslint": "^7.17.0",
+    "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsdoc": "^30.7.8",
+    "eslint-plugin-jsdoc": "^31.0.3",
     "jasmine-core": "^3.6.0",
     "jasmine-spec-reporter": "^6.0.0",
     "karma": "~5.1.0",
@@ -79,8 +80,8 @@
     "karma-jasmine-html-reporter": "^1.5.4",
     "memoizee": "^0.4.14",
     "protractor": "~7.0.0",
-    "ts-node": "^9.0.0",
+    "ts-node": "^9.1.1",
     "tslint": "^6.1.3",
-    "typescript": "^4.0.5"
+    "typescript": "4.0.5"
   }
 }
