--- a/classroom/package.json
+++ b/classroom/package.json
@@ -37,39 +37,44 @@
     "@angular/platform-browser": "^11.1.1",
     "@angular/platform-browser-dynamic": "^11.1.1",
     "@angular/router": "^11.1.1",
-    "angular-google-charts": "^2.0.0",
+    "angular-google-charts": "^2.0.1",
     "angular-split": "^5.0.0",
-    "angular-tag-cloud-module": "^5.2.1",
+    "angular-tag-cloud-module": "^5.2.2",
     "core-js": "^3.8.3",
-    "d3": "^6.3.1",
+    "d3": "^6.5.0",
     "jquery": "^3.5.1",
     "ngx-ui-loader": "^10.0.0",
     "rxjs": "^6.6.3",
     "rxjs-compat": "^6.6.3",
-    "rxjs-tslint": "^0.1.8",
     "service": "^0.1.4",
     "tslib": "^2.1.0",
     "zone.js": "^0.10.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1101.2",
+    "@angular-eslint/builder": "1.1.0",
+    "@angular-eslint/eslint-plugin": "1.1.0",
+    "@angular-eslint/eslint-plugin-template": "1.1.0",
+    "@angular-eslint/schematics": "1.1.0",
+    "@angular-eslint/template-parser": "1.1.0",
     "@angular/cli": "^11.1.2",
     "@angular/compiler-cli": "^11.1.1",
     "@angular/language-service": "^11.1.1",
-    "@types/d3": "^6.2.0",
-    "@types/jasmine": "^3.6.2",
+    "@types/d3": "^6.3.0",
+    "@types/jasmine": "^3.6.3",
     "@types/jasminewd2": "^2.0.8",
-    "@types/node": "^14.14.21",
-    "@typescript-eslint/eslint-plugin": "^4.14.0",
-    "@typescript-eslint/eslint-plugin-tslint": "^4.14.0",
-    "@typescript-eslint/parser": "^4.14.0",
+    "@types/node": "^14.14.22",
+    "@typescript-eslint/eslint-plugin": "4.14.1",
+    "@typescript-eslint/eslint-plugin-tslint": "^4.14.1",
+    "@typescript-eslint/parser": "4.14.1",
     "ajv": "^7.0.3",
     "ajv-keywords": "^4.0.0",
     "codelyzer": "^6.0.1",
     "eslint": "^7.18.0",
     "eslint-config-prettier": "^7.2.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsdoc": "^31.0.7",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jsdoc": "31.4.0",
+    "eslint-plugin-prefer-arrow": "1.2.3",
     "jasmine-core": "^3.6.0",
     "jasmine-spec-reporter": "^6.0.0",
     "karma": "~5.2.3",
@@ -80,7 +85,6 @@
     "memoizee": "^0.4.15",
     "protractor": "~7.0.0",
     "ts-node": "^9.1.1",
-    "tslint": "^6.1.3",
     "typescript": "4.0.5"
   }
 }
