--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,9 @@ itsdangerous = "*"
 aiofiles = "*"
 email-validator = "*"
 ujson = "*"
+lxml = "*"
+fastapi-profiler = "*"
+deprecation = "*"
 
 [dev-packages]
 pylint = "*"
