--- a/requirements.txt
+++ b/requirements.txt
@@ -10,19 +10,23 @@ aiofiles==0.6.0
 beautifulsoup4==4.9.3
 dnspython==2.1.0; python_version >= '3.6'
 email-validator==1.1.2
+fastapi-profiler==1.0.0
 fastapi==0.63.0
 idna==3.1; python_version >= '3.4'
 itsdangerous==1.1.0
+lxml==4.6.2
 mysqlclient==2.0.3
-numpy==1.19.5; python_version >= '3.6'
-pandas==1.2.1
+numpy==1.20.1; python_version >= '3.7'
+pandas==1.2.2
 pillow==8.1.0; python_version >= '3.6'
 pydantic==1.7.3; python_version >= '3.6'
+pyinstrument-cext==0.2.3
+pyinstrument==3.3.0; python_version >= '3.6'
 python-dateutil==2.8.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-pytz==2020.5
+pytz==2021.1
 reportlab==3.5.59
 six==1.15.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-soupsieve==2.1; python_version >= '3.0'
-sqlalchemy==1.3.22
+soupsieve==2.2; python_version >= '3.0'
+sqlalchemy==1.3.23
 starlette==0.13.6; python_version >= '3.6'
 ujson==4.0.2
