--- a/classroom/package.json
+++ b/classroom/package.json
@@ -27,16 +27,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^11.1.1",
-    "@angular/cdk": "~11.1.1",
-    "@angular/common": "^11.1.1",
-    "@angular/compiler": "^11.1.1",
-    "@angular/core": "^11.1.1",
-    "@angular/forms": "^11.1.1",
-    "@angular/material": "^11.1.1",
-    "@angular/platform-browser": "^11.1.1",
-    "@angular/platform-browser-dynamic": "^11.1.1",
-    "@angular/router": "^11.1.1",
+    "@angular/animations": "^11.2.0",
+    "@angular/cdk": "~11.2.0",
+    "@angular/common": "^11.2.0",
+    "@angular/compiler": "^11.2.0",
+    "@angular/core": "^11.2.0",
+    "@angular/forms": "^11.2.0",
+    "@angular/material": "^11.2.0",
+    "@angular/platform-browser": "^11.2.0",
+    "@angular/platform-browser-dynamic": "^11.2.0",
+    "@angular/router": "^11.2.0",
     "angular-google-charts": "^2.0.1",
     "angular-split": "^5.0.0",
     "angular-tag-cloud-module": "^5.2.2",
@@ -51,29 +51,29 @@
     "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1101.2",
-    "@angular-eslint/builder": "1.1.0",
-    "@angular-eslint/eslint-plugin": "1.1.0",
-    "@angular-eslint/eslint-plugin-template": "1.1.0",
-    "@angular-eslint/schematics": "1.1.0",
-    "@angular-eslint/template-parser": "1.1.0",
+    "@angular-devkit/build-angular": "^0.1101.4",
+    "@angular-eslint/builder": "1.2.0",
+    "@angular-eslint/eslint-plugin": "1.2.0",
+    "@angular-eslint/eslint-plugin-template": "1.2.0",
+    "@angular-eslint/schematics": "1.2.0",
+    "@angular-eslint/template-parser": "1.2.0",
     "@angular/cli": "^11.1.2",
-    "@angular/compiler-cli": "^11.1.1",
-    "@angular/language-service": "^11.1.1",
+    "@angular/compiler-cli": "^11.2.0",
+    "@angular/language-service": "^11.2.0",
     "@types/d3": "^6.3.0",
     "@types/jasmine": "^3.6.3",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^14.14.22",
-    "@typescript-eslint/eslint-plugin": "4.14.2",
+    "@typescript-eslint/eslint-plugin": "^4.15.0",
     "@typescript-eslint/eslint-plugin-tslint": "^4.14.2",
-    "@typescript-eslint/parser": "4.14.2",
-    "ajv": "^7.0.4",
+    "@typescript-eslint/parser": "^4.15.0",
+    "ajv": "^7.1.0",
     "ajv-keywords": "^4.0.0",
     "codelyzer": "^6.0.1",
     "eslint": "^7.19.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-jsdoc": "31.6.0",
+    "eslint-plugin-jsdoc": "^31.6.1",
     "eslint-plugin-prefer-arrow": "1.2.3",
     "jasmine-core": "^3.6.0",
     "jasmine-spec-reporter": "^6.0.0",
@@ -83,6 +83,7 @@
     "karma-jasmine": "^4.0.1",
     "karma-jasmine-html-reporter": "^1.5.4",
     "memoizee": "^0.4.15",
+    "npm": "^6.14.11",
     "protractor": "~7.0.0",
     "ts-node": "^9.1.1",
     "typescript": "4.0.5"
