--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@
 -i https://pypi.org/simple
 aiofiles==0.6.0
 beautifulsoup4==4.9.3
+deprecation==2.1.0
 dnspython==2.1.0; python_version >= '3.6'
 email-validator==1.1.2
 fastapi-profiler==1.0.0
@@ -17,11 +18,13 @@ itsdangerous==1.1.0
 lxml==4.6.2
 mysqlclient==2.0.3
 numpy==1.20.1; python_version >= '3.7'
+packaging==20.9; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 pandas==1.2.2
 pillow==8.1.0; python_version >= '3.6'
 pydantic==1.7.3; python_version >= '3.6'
 pyinstrument-cext==0.2.3
 pyinstrument==3.3.0; python_version >= '3.6'
+pyparsing==2.4.7; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
 python-dateutil==2.8.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 pytz==2021.1
 reportlab==3.5.59
