--- a/classroom/package.json
+++ b/classroom/package.json
@@ -48,7 +48,7 @@
     "rxjs-compat": "^6.6.3",
     "service": "^0.1.4",
     "tslib": "^2.1.0",
-    "zone.js": "^0.10.3"
+    "zone.js": "^0.11.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.1102.0",
@@ -73,7 +73,7 @@
     "eslint": "^7.20.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-jsdoc": "^31.6.1",
+    "eslint-plugin-jsdoc": "^32.0.0",
     "eslint-plugin-prefer-arrow": "1.2.3",
     "jasmine-core": "^3.6.0",
     "jasmine-spec-reporter": "^6.0.0",
@@ -86,6 +86,6 @@
     "npm": "^6.14.11",
     "protractor": "~7.0.0",
     "ts-node": "^9.1.1",
-    "typescript": "4.0.5"
+    "typescript": "^4.1.5"
   }
 }
