--- a/classroom/angular.json
+++ b/classroom/angular.json
@@ -31,7 +31,6 @@
               "src/styles.css"
             ],
             "scripts": [
-              "node_modules/jquery/dist/jquery.min.js"
             ]
           },
           "configurations": {
@@ -144,12 +143,12 @@
           }
         },
         "lint": {
-          "builder": "@angular-devkit/build-angular:tslint",
+          "builder": "@angular-eslint/builder:lint",
           "options": {
-            "tsConfig": "e2e/tsconfig.e2e.json",
-            "exclude": [
-              "**/node_modules/**"
-            ]
+	    "lintFilePatterns": [
+	      "e2e/**/*.ts",
+	      "e2e/**/*.html"
+	      ]
           }
         }
       }
