--- a/requirements.txt
+++ b/requirements.txt
@@ -19,9 +19,9 @@ lxml==4.6.2
 mysqlclient==2.0.3
 numpy==1.20.1; python_version >= '3.7'
 packaging==20.9; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-pandas==1.2.2
-pillow==8.1.0; python_version >= '3.6'
-pydantic==1.7.3; python_version >= '3.6'
+pandas==1.2.3
+pillow==8.1.1; python_version >= '3.6'
+pydantic==1.8; python_full_version >= '3.6.1'
 pyinstrument-cext==0.2.4
 pyinstrument==3.4.1; python_version >= '3.6'
 pyparsing==2.4.7; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
@@ -32,4 +32,5 @@ six==1.15.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3
 soupsieve==2.2; python_version >= '3.0'
 sqlalchemy==1.3.23
 starlette==0.13.6; python_version >= '3.6'
+typing-extensions==3.7.4.3
 ujson==4.0.2
