--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,7 +29,7 @@ pylint:
     - pip install --no-cache-dir --upgrade --quiet -r requirements.txt
     - pip install pylint --quiet
   script:
-    - pylint --extension-pkg-whitelist=pydantic --disable=R0801 app
+    - pylint --extension-pkg-whitelist=pydantic,lxml --disable=R0801 app
   allow_failure: true
 
 classroom_lint:
