--- a/classroom/package.json
+++ b/classroom/package.json
@@ -26,16 +26,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^11.2.5",
-    "@angular/cdk": "~11.2.4",
-    "@angular/common": "^11.2.5",
-    "@angular/compiler": "^11.2.5",
-    "@angular/core": "^11.2.5",
-    "@angular/forms": "^11.2.5",
-    "@angular/material": "^11.2.4",
-    "@angular/platform-browser": "^11.2.5",
-    "@angular/platform-browser-dynamic": "^11.2.5",
-    "@angular/router": "^11.2.5",
+    "@angular/animations": "^11.2.6",
+    "@angular/cdk": "~11.2.5",
+    "@angular/common": "^11.2.6",
+    "@angular/compiler": "^11.2.6",
+    "@angular/core": "^11.2.6",
+    "@angular/forms": "^11.2.6",
+    "@angular/material": "^11.2.5",
+    "@angular/platform-browser": "^11.2.6",
+    "@angular/platform-browser-dynamic": "^11.2.6",
+    "@angular/router": "^11.2.6",
     "angular-google-charts": "^2.0.1",
     "angular-split": "^5.0.0",
     "angular-tag-cloud-module": "^5.3.0",
@@ -49,31 +49,31 @@
     "zone.js": "^0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1102.4",
-    "@angular-eslint/builder": "1.2.0",
-    "@angular-eslint/eslint-plugin": "1.2.0",
-    "@angular-eslint/eslint-plugin-template": "1.2.0",
-    "@angular-eslint/schematics": "1.2.0",
-    "@angular-eslint/template-parser": "1.2.0",
-    "@angular/cli": "^11.2.4",
-    "@angular/compiler-cli": "^11.2.5",
-    "@angular/language-service": "^11.2.5",
+    "@angular-devkit/build-angular": "^0.1102.5",
+    "@angular-eslint/builder": "^2.0.0",
+    "@angular-eslint/eslint-plugin": "^2.0.0",
+    "@angular-eslint/eslint-plugin-template": "^2.0.0",
+    "@angular-eslint/schematics": "2.0.2",
+    "@angular-eslint/template-parser": "^2.0.0",
+    "@angular/cli": "^11.2.5",
+    "@angular/compiler-cli": "^11.2.6",
+    "@angular/language-service": "^11.2.6",
     "@types/d3": "^6.3.0",
-    "@types/jasmine": "^3.6.6",
+    "@types/jasmine": "^3.6.7",
     "@types/jasminewd2": "^2.0.8",
-    "@types/node": "^14.14.34",
-    "@typescript-eslint/eslint-plugin": "^4.17.0",
-    "@typescript-eslint/eslint-plugin-tslint": "^4.17.0",
-    "@typescript-eslint/parser": "^4.17.0",
+    "@types/node": "^14.14.35",
+    "@typescript-eslint/eslint-plugin": "^4.18.0",
+    "@typescript-eslint/eslint-plugin-tslint": "^4.18.0",
+    "@typescript-eslint/parser": "^4.18.0",
     "ajv": "^7.2.1",
     "ajv-keywords": "^4.0.0",
-    "eslint": "^7.21.0",
+    "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-formatter-gitlab": "^2.2.0",
     "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-jsdoc": "^32.2.0",
+    "eslint-plugin-jsdoc": "^32.3.0",
     "eslint-plugin-prefer-arrow": "1.2.3",
-    "jasmine-core": "^3.6.0",
+    "jasmine-core": "^3.7.0",
     "jasmine-spec-reporter": "^6.0.0",
     "karma": "^6.2.0",
     "karma-chrome-launcher": "~3.1.0",
