--- a/classroom/package.json
+++ b/classroom/package.json
@@ -73,11 +73,11 @@
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jsdoc": "^32.3.0",
     "eslint-plugin-prefer-arrow": "1.2.3",
-    "jasmine-core": "^3.7.0",
+    "jasmine-core": "^3.7.1",
     "jasmine-spec-reporter": "^6.0.0",
     "karma": "^6.2.0",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.3",
+    "karma-coverage": "^2.0.3",
     "karma-jasmine": "^4.0.1",
     "karma-jasmine-html-reporter": "^1.5.4",
     "npm": "^6.14.11",
