--- a/requirements.txt
+++ b/requirements.txt
@@ -13,24 +13,25 @@ dnspython==2.1.0; python_version >= '3.6'
 email-validator==1.1.2
 fastapi-profiler==1.0.0
 fastapi==0.63.0
+greenlet==1.0.0; python_version >= '3'
 idna==3.1; python_version >= '3.4'
 itsdangerous==1.1.0
-lxml==4.6.2
+lxml==4.6.3
 mysqlclient==2.0.3
-numpy==1.20.1; python_version >= '3.7'
+numpy==1.20.2; python_version >= '3.7'
 packaging==20.9; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 pandas==1.2.3
-pillow==8.1.2; python_version >= '3.6'
+pillow==8.2.0; python_version >= '3.6'
 pydantic==1.8.1; python_full_version >= '3.6.1'
 pyinstrument-cext==0.2.4
 pyinstrument==3.4.1; python_version >= '3.6'
 pyparsing==2.4.7; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
 python-dateutil==2.8.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 pytz==2021.1
-reportlab==3.5.65
+reportlab==3.5.66
 six==1.15.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-soupsieve==2.2; python_version >= '3.0'
-sqlalchemy==1.3.23
+soupsieve==2.2.1; python_version >= '3'
+sqlalchemy==1.4.6
 starlette==0.13.6; python_version >= '3.6'
 typing-extensions==3.7.4.3
 ujson==4.0.2
