--- a/classroom/.eslintrc.json
+++ b/classroom/.eslintrc.json
@@ -51,10 +51,17 @@
         "*.html"
       ],
       "extends": [
-        "plugin:@angular-eslint/template/recommended",
-        "plugin:prettier/recommended"
+        "plugin:@angular-eslint/template/recommended"
       ],
       "rules": {}
+    },
+    {
+      "files": ["*.html"],
+      "excludeFiles": ["*inline-template-*.component.html"],
+      "extends": [ "plugin:prettier/recommended" ],
+      "rules": {
+        "prettier/prettier": ["error", { "parser": "angular" }]
+      }
     }
   ]
 }
