--- a/classroom/package.json
+++ b/classroom/package.json
@@ -15,8 +15,8 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --prod --output-hashing none",
-    "build:docuscope": "ng build --prod --base-href=./ --output-hashing none",
+    "build": "ng build --output-hashing none",
+    "build:docuscope": "ng build --base-href=./ --output-hashing none",
     "build_dev": "ng build --base-href=/classroom/ --output-hashing none",
     "build_prod": "ng build --base-href=/docuscope/classroom/ --output-hashing none --configuration=deploy",
     "test": "ng test",
@@ -27,20 +27,20 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^11.2.13",
-    "@angular/cdk": "~11.2.12",
-    "@angular/common": "^11.2.13",
-    "@angular/compiler": "^11.2.13",
-    "@angular/core": "^11.2.13",
-    "@angular/forms": "^11.2.13",
-    "@angular/material": "^11.2.12",
-    "@angular/platform-browser": "^11.2.13",
-    "@angular/platform-browser-dynamic": "^11.2.13",
-    "@angular/router": "^11.2.13",
+    "@angular/animations": "^12.0.0",
+    "@angular/cdk": "~12.0.0",
+    "@angular/common": "^12.0.0",
+    "@angular/compiler": "^12.0.0",
+    "@angular/core": "^12.0.0",
+    "@angular/forms": "^12.0.0",
+    "@angular/material": "^12.0.0",
+    "@angular/platform-browser": "^12.0.0",
+    "@angular/platform-browser-dynamic": "^12.0.0",
+    "@angular/router": "^12.0.0",
     "angular-google-charts": "^2.2.1",
     "angular-split": "^5.0.0",
     "angular-tag-cloud-module": "^5.3.0",
-    "core-js": "^3.12.0",
+    "core-js": "^3.12.1",
     "d3": "^6.7.0",
     "ngx-ui-loader": "^11.0.0",
     "rxjs": "^6.6.7",
@@ -50,28 +50,28 @@
     "zone.js": "^0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1102.12",
-    "@angular-eslint/builder": "^4.2.0",
-    "@angular-eslint/eslint-plugin": "^4.2.0",
-    "@angular-eslint/eslint-plugin-template": "^4.2.0",
-    "@angular-eslint/template-parser": "^4.2.0",
-    "@angular/cli": "^11.2.12",
-    "@angular/compiler-cli": "^11.2.13",
-    "@angular/language-service": "^11.2.13",
+    "@angular-devkit/build-angular": "^12.0.0",
+    "@angular-eslint/builder": "^12.0.0",
+    "@angular-eslint/eslint-plugin": "^12.0.0",
+    "@angular-eslint/eslint-plugin-template": "^12.0.0",
+    "@angular-eslint/template-parser": "^12.0.0",
+    "@angular/cli": "^12.0.0",
+    "@angular/compiler-cli": "^12.0.0",
+    "@angular/language-service": "^12.0.0",
     "@types/d3": "^6.3.0",
     "@types/google.visualization": "^0.0.66",
-    "@types/jasmine": "^3.7.0",
+    "@types/jasmine": "^3.7.4",
     "@types/jasminewd2": "^2.0.9",
-    "@types/node": "^15.0.2",
-    "@typescript-eslint/eslint-plugin": "^4.22.1",
-    "@typescript-eslint/parser": "^4.22.1",
-    "ajv": "^8.2.0",
+    "@types/node": "^15.0.3",
+    "@typescript-eslint/eslint-plugin": "^4.23.0",
+    "@typescript-eslint/parser": "^4.23.0",
+    "ajv": "^8.3.0",
     "ajv-keywords": "^5.0.0",
-    "eslint": "^7.25.0",
+    "eslint": "^7.26.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-formatter-gitlab": "^2.2.0",
-    "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-jsdoc": "^33.1.0",
+    "eslint-plugin-import": "2.23.0",
+    "eslint-plugin-jsdoc": "^34.2.2",
     "eslint-plugin-prefer-arrow": "1.2.3",
     "eslint-plugin-prettier": "^3.4.0",
     "jasmine-core": "^3.7.1",
@@ -81,9 +81,9 @@
     "karma-coverage": "^2.0.3",
     "karma-jasmine": "^4.0.1",
     "karma-jasmine-html-reporter": "^1.6.0",
-    "prettier": "^2.2.1",
+    "prettier": "^2.3.0",
     "protractor": "~7.0.0",
     "ts-node": "^9.1.1",
-    "typescript": "~4.1.5"
+    "typescript": "~4.2.4"
   }
 }
